# sample-python-fastapi

./: README.md  pyproject.toml
src/api/: dependencies.py  main.py  routers.py  schemas.py
src/application/: services.py
src/domain/: models.py  ports.py
src/infrastructure/: repositories.py
tests/: conftest.py  test_user_registration.py
tests/integration/api/: test_users_api.py
tests/unit/application/: test_services.py
