[project]
name = "sample-python-fastapi"
version = "0.1.0"
description = "A DDD/BDD FastAPI rapid prototyping environment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic[email]>=2.6.0",
    "uvicorn>=0.29.0",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-v --cov=src --cov-report=term-missing"
testpaths = ["tests"]